--- a/scripts/mdl_config.yml
+++ b/scripts/mdl_config.yml
@@ -5,9 +5,9 @@ task:
   identifier: my_train_job
   parallel: False
   # If seed is not set, then it will be random every time
-  seed: 
+  seed: 12345678
   # Defaults to run directory if not specified
-  save_dir: 
+  save_dir: mdl_training/
   # continue from a previous job
   continue_job: False
   # spefcify if the training state is loaded: epochs, learning rate, etc
@@ -17,9 +17,9 @@ task:
   # Whether to write predictions to csv file. E.g. ["train", "val", "test"]
   write_output: [train, val, test]
   # Frequency of writing to file; 0 denotes writing only at the end, 1 denotes writing every time
-  output_frequency: 0
+  output_frequency: 1
   # Frequency of saving model .pt file; 0 denotes saving only at the end, 1 denotes saving every time, -1 denotes never saving; this controls both checkpoint and best_checkpoint
-  model_save_frequency: 0
+  model_save_frequency: 1
   # Specify if labels are provided for the predict task
   # labels: True
   # Use amp mixed precision
@@ -28,8 +28,8 @@ task:
 model:
   name: torchmd_etEarly
   # model attributes
-  hidden_channels: 128
-  num_layers: 8
+  hidden_channels: 64
+  num_layers: 4
   num_rbf: 50
   activation: "silu"
   attn_activation: "silu"
@@ -46,19 +46,19 @@ model:
   # Compute node attributes on the fly in the model forward
   otf_node_attr: True
   # compute gradients w.r.t to positions and cell, requires otf_edge_attr=True      
-  gradient: False
+  gradient: True
 
 optim:
-  max_epochs: 40
+  max_epochs: 5
   max_checkpoint_epochs: 0
-  lr: 0.001
+  lr: 0.0005
   # Either custom or from torch.nn.functional library. If from torch, loss_type is TorchLossWrapper
   loss:
-    loss_type: TorchLossWrapper
-    loss_args: {loss_fn: l1_loss}
+    loss_type: ForceStressLoss
+    loss_args: {weight_energy: 0.01, weight_force: 50.0, weight_stress: 50.0}
   # gradient clipping value
   clip_grad_norm: 10       
-  batch_size: 100
+  batch_size: 50
   optimizer:
     optimizer_type: AdamW
     optimizer_args: {}
@@ -75,7 +75,7 @@ dataset:
   # Whether the data has already been processed and a data.pt file is present from a previous run
   processed: False
   # Path to data files - this can either be in the form of a string denoting a single path or a dictionary of {train: train_path, val: val_path, test: test_path, predict: predict_path}
-  src: data/data_graph_scalar.json
+  src: 
   # Path to target file within data_path - this can either be in the form of a string denoting a single path or a dictionary of {train: train_path, val: val_path, test: test_path} or left blank when the dataset is a single json file
   # Example: target_path: "data/raw_graph_scalar/targets.csv"
   target_path: 
@@ -95,14 +95,14 @@ dataset:
   # Format of data files (limit to those supported by ASE: https://wiki.fysik.dtu.dk/ase/ase/io/io.html)
   data_format: json
   # specify if additional attributes to be loaded into the dataset from the .json file; e.g. additional_attributes: [forces, stress]
-  additional_attributes: 
+  additional_attributes: [forces, stress]
   # Print out processing info
   verbose: True
   # Index of target column in targets.csv
   # graph specific settings
   preprocess_params:
     # one of mdl (minimum image convention), ocp (all neighbors included)
-    edge_calc_method: mdl 
+    edge_calc_method: ocp 
     # determine if edges are computed, if false, then they need to be computed on the fly   
     preprocess_edges: False
     # determine if edge attributes are computed during processing, if false, then they need to be computed on the fly   
