--- a/scripts/mdl_calculator_config.yml
+++ b/scripts/mdl_calculator_config.yml
@@ -46,6 +46,7 @@ model:
   otf_node_attr: True
   # compute gradients w.r.t to positions and cell, requires otf_edge_attr=True      
   gradient: True
+  model_ensemble: 2
 
 optim:
   max_epochs: 5
