--- a/scripts/mdl_config.yml
+++ b/scripts/mdl_config.yml
@@ -5,15 +5,15 @@ task:
   identifier: my_train_job
   parallel: False
   # If seed is not set, then it will be random every time
-  seed: 12345678
+  seed: 201
   # Defaults to run directory if not specified
   save_dir: mdl_training/
   # continue from a previous job
-  continue_job: False
+  continue_job: True
   # spefcify if the training state is loaded: epochs, learning rate, etc
   load_training_state: False
   # Path to the checkpoint.pt file
-  checkpoint_path: model/best_checkpoint.pt
+  checkpoint_path: pretrained_models/best_checkpoint.pt
   # Whether to write predictions to csv file. E.g. ["train", "val", "test"]
   write_output: [train, val, test]
   # Frequency of writing to file; 0 denotes writing only at the end, 1 denotes writing every time
@@ -28,8 +28,8 @@ task:
 model:
   name: torchmd_etEarly
   # model attributes
-  hidden_channels: 64
-  num_layers: 4
+  hidden_channels: 128
+  num_layers: 8
   num_rbf: 50
   activation: "silu"
   attn_activation: "silu"
@@ -58,7 +58,7 @@ optim:
     loss_args: {weight_energy: 0.01, weight_force: 50.0, weight_stress: 50.0}
   # gradient clipping value
   clip_grad_norm: 10       
-  batch_size: 50
+  batch_size: 32
   optimizer:
     optimizer_type: AdamW
     optimizer_args: {}
@@ -75,7 +75,8 @@ dataset:
   # Whether the data has already been processed and a data.pt file is present from a previous run
   processed: False
   # Path to data files - this can either be in the form of a string denoting a single path or a dictionary of {train: train_path, val: val_path, test: test_path, predict: predict_path}
-  src: 
+  #src: data/data_subset_msp.json
+  src: /global/cfs/projectdirs/m3641/Shared/Materials_datasets/MP_data_forces/raw/data_full_msp.json
   # Path to target file within data_path - this can either be in the form of a string denoting a single path or a dictionary of {train: train_path, val: val_path, test: test_path} or left blank when the dataset is a single json file
   # Example: target_path: "data/raw_graph_scalar/targets.csv"
   target_path: 
@@ -129,5 +130,5 @@ dataset:
   dataset_device: cpu
   # Ratios for train/val/test split out of a total of less than 1 (0.8 corresponds to 80% of the data)
   train_ratio: 0.9
-  val_ratio: 0.1
-  test_ratio: 0.0
+  val_ratio: 0.05
+  test_ratio: 0.05
