--- a/scripts/mdl_config.yml
+++ b/scripts/mdl_config.yml
@@ -13,7 +13,9 @@ task:
   # spefcify if the training state is loaded: epochs, learning rate, etc
   load_training_state: False
   # Path to the checkpoint.pt file
-  checkpoint_path: "../ensemble_model/torchmd-1/checkpoint_0/best_checkpoint.pt,../ensemble_model/torchmd-2/checkpoint_0/best_checkpoint.pt,../ensemble_model/torchmd-3/checkpoint_0/best_checkpoint.pt,../ensemble_model/torchmd-4/checkpoint_0/best_checkpoint.pt,../ensemble_model/torchmd-5/checkpoint_0/best_checkpoint.pt"
+  checkpoint_path: "scripts/best_checkpoint.pt"
+
+  #checkpoint_path: "../ensemble_model/torchmd-1/checkpoint_0/best_checkpoint.pt,../ensemble_model/torchmd-2/checkpoint_0/best_checkpoint.pt,../ensemble_model/torchmd-3/checkpoint_0/best_checkpoint.pt,../ensemble_model/torchmd-4/checkpoint_0/best_checkpoint.pt,../ensemble_model/torchmd-5/checkpoint_0/best_checkpoint.pt"
   #checkpoint_path: "../pretrained_models/best_checkpoint.pt"
   #checkpoint_path: "../ensemble_model/torchmd-1/checkpoint_0/best_checkpoint.pt"
   # Whether to write predictions to csv file. E.g. ["train", "val", "test"]
